2009-04-18  Mario Blättermann  <mariobl@gnome.org>

	* de/de.po: Updated German translation

2009-04-05 Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation by Daniel Mustieles

2009-04-04 Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation by Daniel Mustieles

2009-02-21  Mario Blättermann  <mariobl@svn.gnome.org>

	* de/de.po: Updated German translation

2009-02-13 Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation by Daniel Mustieles

2009-02-13  Piotr Eljasiak  <epiotr@use.pl>

	* doc/C/gnome-commander.xml:
	* doc/*/*.po:
	typo: filename -> file name

2009-02-01  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation by Daniel Mustieles.

2009-01-24  Andre Klapper  <a9016009@gmx.de>

	* de/de.po: Updated German translation.

2009-01-23  Jorge González  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation by Daniel Mustieles

2009-01-16  Piotr Eljasiak  <epiotr@use.pl>

	* doc/C/gnome-commander.xml:
	* doc/*/*.po:
	typo: Exif Private -> Exif private

2009-01-05  Jorge González  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation by Daniel Mustieles

2009-01-01  Jorge González  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation by Daniel Mustieles

2008-12-27  Jorge González  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation by Daniel Mustieles

2008-12-26  Mario Blättermann  <mariobl@svn.gnome.org>

	* de/de.po: Updated German translation

2008-12-05  Mario Blättermann  <mariobl@svn.gnome.org>

	* de/de.po: Updated German translation

2008-11-30  Jorge González  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation by Daniel Mustieles

2008-11-24  Piotr Eljasiak  <epiotr@use.pl>

	* doc/C/gnome-commander.xml: Removed xmllint warnings

2008-11-15  Jorge González  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation by Daniel Mustieles
